<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_preferences_title">
        <SwitchPreferenceCompat
            app:key="sync_theme"
            app:title="@string/sync_theme_title" />

        <SwitchPreferenceCompat
            app:dependency="sync_theme"
            app:key="attachment_theme"
            app:summaryOn="@string/sync_attachment_theme_summary_on"
            app:summaryOff="@string/sync_attachment_theme_summary_off"
            app:title="@string/sync_attachment_theme_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="DEBUG">
        <Preference
            app:key="DEBUG_budget_drop"
            app:title="DROP BUDGET"
            app:summary="Drops budget data" />
    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>