<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/food_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textCapSentences"
        android:hint="@string/hint_item_name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/food_useByDate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/hint_select_useByDate" />

    <EditText
        android:id="@+id/food_quantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="number"
        android:hint="@string/hint_quantity"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="10dp" />

    <EditText
        android:id="@+id/food_protein_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_enter_protein"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/food_fat_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_enter_fat"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/food_carbs_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_enter_carbs"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/food_calories_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_enter_calories"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="10dp" />

    <EditText
        android:id="@+id/food_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLines="3"
        android:hint="@string/hint_item_description"
        android:importantForAutofill="no" />

</LinearLayout>