<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/recipe_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/recipe_cookingTime_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cookingTime"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/load_recipe_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_load_image"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/recipe_preview_image_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cnt_descr_recipe_preview_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_negative_btn"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_positive_btn"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>