<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/top_corner_card"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/food_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:hint="@string/hint_item_name"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/food_useByDate_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_select_useByDate"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/food_quantity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_quantity"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/food_protein_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_enter_protein"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/food_fat_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_enter_fat"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/food_carbs_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_enter_carbs"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/food_calories_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_enter_calories"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="numberDecimal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/food_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:hint="@string/hint_item_description"
            android:autofillHints="name"
            android:layout_marginHorizontal="10dp"
            android:inputType="textMultiLine|textCapSentences" />

        <Button
            android:id="@+id/add_food_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/action_addToList"
            android:textAllCaps="false"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>