<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aes.myhome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_fast_nav_to_shopping"
            app:destination="@id/nav_food_shopping"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_menu"
            app:destination="@+id/nav_food_menu"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_recipes"
            app:destination="@+id/nav_food_recipes"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_diet"
            app:destination="@+id/nav_food_diet"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />


        <action
            android:id="@+id/action_fast_nav_to_schedule"
            app:destination="@+id/nav_tasks_schedule"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_cases"
            app:destination="@+id/nav_tasks_cases"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_works"
            app:destination="@+id/nav_tasks_works"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />


        <action
            android:id="@+id/action_fast_nav_to_budget"
            app:destination="@+id/nav_other_budget"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_closet"
            app:destination="@+id/nav_other_closet"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_fast_nav_to_fun"
            app:destination="@+id/nav_other_fun"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.aes.myhome.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

    <action
        android:id="@+id/action_open_settings"
        app:destination="@id/nav_settings" />

<!--    Food-->

    <fragment
        android:id="@+id/nav_food_shopping"
        android:name="com.aes.myhome.ui.food.shopping.ShoppingFragment"
        android:label="@string/menu_food_shopping"
        tools:layout="@layout/fragment_shopping">

        <deepLink
            app:uri="App://food.shopping" />
    </fragment>

    <fragment
        android:id="@+id/nav_food_menu"
        android:name="com.aes.myhome.ui.food.menu.MenuFragment"
        android:label="@string/menu_food_menu"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/nav_food_menu_navToFoodShowing"
            app:destination="@id/nav_food_menu_food_showing"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/nav_food_menu_navToRecipesFinding"
            app:destination="@id/nav_food_menu_recipes_finding"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/nav_food_menu_navToRecipesShowing"
            app:destination="@id/nav_food_recipes_showing"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_food_menu_food_showing"
        android:name="com.aes.myhome.ui.food.menu.showing_food.MenuFoodFragment"
        android:label="Продукты"
        tools:layout="@layout/fragment_menu_food" />

    <fragment
        android:id="@+id/nav_food_menu_recipes_finding"
        android:name="com.aes.myhome.ui.food.menu.recipes_finding.MenuRecipesFragment"
        android:label="Рецепты"
        tools:layout="@layout/fragment_menu_recipes" />

    <fragment
        android:id="@+id/nav_food_recipes"
        android:name="com.aes.myhome.ui.food.recipes.RecipesFragment"
        android:label="@string/menu_food_recipes"
        tools:layout="@layout/fragment_recipes">

        <action
            android:id="@+id/nav_food_recipes_navToCreation"
            app:destination="@id/nav_food_recipes_creation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/nav_food_recipes_navToShowing"
            app:destination="@id/nav_food_recipes_showing"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/nav_food_recipes_creation"
        android:name="com.aes.myhome.ui.food.recipes.creation.CreateRecipeFragment"
        android:label="@string/menu_food_recipes_creation"
        tools:layout="@layout/fragment_create_recipe">

        <action
            android:id="@+id/nav_food_recipes_navToRecipes"
            app:destination="@+id/nav_food_recipes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_food_recipes_showing"
        android:name="com.aes.myhome.ui.food.recipes.showing.ShowRecipeFragment"
        tools:layout="@layout/fragment_show_recipe" />

    <fragment
        android:id="@+id/nav_food_diet"
        android:name="com.aes.myhome.ui.food.diet.DietFragment"
        android:label="@string/menu_food_diet"
        tools:layout="@layout/fragment_diet" />

<!--    Tasks-->

    <fragment
        android:id="@+id/nav_tasks_schedule"
        android:name="com.aes.myhome.ui.tasks.schedule.ScheduleFragment"
        android:label="@string/menu_tasks_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_tasks_cases"
        android:name="com.aes.myhome.ui.tasks.cases.CasesFragment"
        android:label="@string/menu_tasks_cases"
        tools:layout="@layout/fragment_cases" />

    <fragment
        android:id="@+id/nav_tasks_works"
        android:name="com.aes.myhome.ui.tasks.works.WorksFragment"
        android:label="@string/menu_tasks_works"
        tools:layout="@layout/fragment_works" />

<!--    Other-->

    <fragment
        android:id="@+id/nav_other_budget"
        android:name="com.aes.myhome.ui.other.budget.BudgetFragment"
        android:label="@string/menu_other_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_other_closet"
        android:name="com.aes.myhome.ui.other.closet.ClosetFragment"
        android:label="@string/menu_other_closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/nav_other_fun"
        android:name="com.aes.myhome.ui.other.fun.FunFragment"
        android:label="@string/menu_other_fun"
        tools:layout="@layout/fragment_fun" />

</navigation>