<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food.shopping.ShoppingFragment">

    <LinearLayout
        android:id="@+id/shopping_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/collapse_tools_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/action_add"
            android:textAllCaps="false" />

        <LinearLayout
            android:id="@+id/tools_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/product_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_item_name"
                android:autofillHints="name"
                android:layout_marginHorizontal="10dp"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/product_description_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="64dp"
                android:maxLines="3"
                android:hint="@string/hint_item_description"
                android:autofillHints="name"
                android:layout_marginHorizontal="10dp"
                android:inputType="textMultiLine|textCapSentences" />

            <Button
                android:id="@+id/add_product_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/action_addToList"
                android:textAllCaps="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/bottom_shopping_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/finish_shopping_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/action_finishShopping"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/clear_list_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/action_clear"
                android:textSize="18sp"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>